--- a/odoo-bringout-oca-ocb-pos_adyen/pos_adyen/i18n/bs.po
+++ b/odoo-bringout-oca-ocb-pos_adyen/pos_adyen/i18n/bs.po
@@ -27,7 +27,7 @@ msgstr "Adyen API key"
 
 #. module: pos_adyen
 #. odoo-javascript
-#: code:addons/pos_adyen/static/src/js/payment_adyen.js:0
+#: code:addons/pos_adyen/static/src/js/payment_adyen.js
 #, python-format
 msgid "Adyen Error"
 msgstr "Adyen Error"
@@ -54,7 +54,7 @@ msgstr "Adyen Test Mode"
 
 #. module: pos_adyen
 #. odoo-javascript
-#: code:addons/pos_adyen/static/src/js/payment_adyen.js:0
+#: code:addons/pos_adyen/static/src/js/payment_adyen.js
 #, python-format
 msgid "An unexpected error occurred. Message from Adyen: %s"
 msgstr "An unexpected error occurred. Message from Adyen: %s"
@@ -66,27 +66,30 @@ msgstr "Ask Customers For Tip"
 
 #. module: pos_adyen
 #. odoo-javascript
-#: code:addons/pos_adyen/static/src/js/payment_adyen.js:0
+#: code:addons/pos_adyen/static/src/js/payment_adyen.js
 #, python-format
 msgid "Authentication failed. Please check your Adyen credentials."
 msgstr "Authentication failed. Please check your Adyen credentials."
 
 #. module: pos_adyen
 #. odoo-javascript
-#: code:addons/pos_adyen/static/src/js/payment_adyen.js:0
+#: code:addons/pos_adyen/static/src/js/payment_adyen.js
 #, python-format
 msgid ""
 "Cancelling the payment failed. Please cancel it manually on the payment "
 "terminal."
 msgstr ""
+"Cancelling the payment failed. Please cancel it manually on the payment "
+"terminal."
 
 #. module: pos_adyen
 #. odoo-javascript
-#: code:addons/pos_adyen/static/src/js/payment_adyen.js:0
+#: code:addons/pos_adyen/static/src/js/payment_adyen.js
 #, python-format
 msgid "Cannot process transactions with negative amount."
 msgstr "Cannot process transactions with negative amount."
 
+# taken from hr.po
 #. module: pos_adyen
 #: model:ir.model,name:pos_adyen.model_res_config_settings
 msgid "Config Settings"
@@ -94,46 +97,51 @@ msgstr "Postavke"
 
 #. module: pos_adyen
 #. odoo-javascript
-#: code:addons/pos_adyen/static/src/js/payment_adyen.js:0
+#: code:addons/pos_adyen/static/src/js/payment_adyen.js
 #, python-format
 msgid ""
 "Could not connect to the Odoo server, please check your internet connection "
 "and try again."
 msgstr ""
+"Could not connect to the Odoo server, please check your internet connection "
+"and try again."
 
 #. module: pos_adyen
 #. odoo-python
-#: code:addons/pos_adyen/models/pos_payment_method.py:0
-#: code:addons/pos_adyen/models/pos_payment_method.py:0
+#: code:addons/pos_adyen/models/pos_payment_method.py
 #, python-format
 msgid "Invalid Adyen request"
 msgstr "Invalid Adyen request"
 
 #. module: pos_adyen
 #. odoo-javascript
-#: code:addons/pos_adyen/static/src/js/payment_adyen.js:0
+#: code:addons/pos_adyen/static/src/js/payment_adyen.js
 #, python-format
 msgid "Message from Adyen: %s"
 msgstr "Message from Adyen: %s"
 
 #. module: pos_adyen
 #. odoo-python
-#: code:addons/pos_adyen/models/pos_config.py:0
+#: code:addons/pos_adyen/models/pos_config.py
 #, python-format
 msgid ""
 "Please configure a tip product for POS %s to support tipping with Adyen."
 msgstr ""
+"Please configure a tip product for POS %s to support tipping with Adyen."
 
+# taken from hr.po
 #. module: pos_adyen
 #: model:ir.model,name:pos_adyen.model_pos_config
 msgid "Point of Sale Configuration"
 msgstr "Postavke prodajnog mjesta"
 
+# taken from hr.po
 #. module: pos_adyen
 #: model:ir.model,name:pos_adyen.model_pos_payment_method
 msgid "Point of Sale Payment Methods"
 msgstr "Načini plaćanja na prodajnom mjestu"
 
+# taken from hr.po
 #. module: pos_adyen
 #: model:ir.model,name:pos_adyen.model_pos_session
 msgid "Point of Sale Session"
@@ -151,14 +159,14 @@ msgstr "Run transactions in the test environment."
 
 #. module: pos_adyen
 #. odoo-python
-#: code:addons/pos_adyen/models/pos_payment_method.py:0
+#: code:addons/pos_adyen/models/pos_payment_method.py
 #, python-format
 msgid "Terminal %s is already used in company %s on payment method %s."
 msgstr "Terminal %s is already used in company %s on payment method %s."
 
 #. module: pos_adyen
 #. odoo-python
-#: code:addons/pos_adyen/models/pos_payment_method.py:0
+#: code:addons/pos_adyen/models/pos_payment_method.py
 #, python-format
 msgid "Terminal %s is already used on payment method %s."
 msgstr "Terminal %s is already used on payment method %s."
@@ -169,6 +177,8 @@ msgid ""
 "Used when connecting to Adyen: https://docs.adyen.com/user-management/how-"
 "to-get-the-api-key/#description"
 msgstr ""
+"Used when connecting to Adyen: https://docs.adyen.com/user-management/how-"
+"to-get-the-api-key/#description"
 
 #. module: pos_adyen
 #: model:ir.model.fields,help:pos_adyen.field_pos_payment_method__adyen_terminal_identifier
