--- a/odoo-bringout-oca-ocb-pos_discount/pos_discount/i18n/bs.po
+++ b/odoo-bringout-oca-ocb-pos_discount/pos_discount/i18n/bs.po
@@ -17,74 +17,83 @@ msgstr ""
 
 #. module: pos_discount
 #. odoo-python
-#: code:addons/pos_discount/models/pos_config.py:0
+#: code:addons/pos_discount/models/pos_config.py
 #, python-format
 msgid ""
 "A discount product is needed to use the Global Discount feature. Go to Point"
 " of Sale > Configuration > Settings to set it."
 msgstr ""
+"A discount product is needed to use the Global Discount feature. Go to Point"
+" of Sale > Configuration > Settings to set it."
 
+# taken from hr.po
 #. module: pos_discount
 #: model:ir.model.fields,help:pos_discount.field_pos_config__iface_discount
 msgid "Allow the cashier to give discounts on the whole order."
 msgstr "Omogućuje blagajniku odobravanje popusta na cijelu narudžbu."
 
+# taken from hr.po
 #. module: pos_discount
 #: model:ir.model,name:pos_discount.model_res_config_settings
 msgid "Config Settings"
 msgstr "Postavke"
 
+# taken from hr.po
 #. module: pos_discount
 #. odoo-javascript
-#: code:addons/pos_discount/static/src/xml/DiscountButton.xml:0
+#: code:addons/pos_discount/static/src/xml/DiscountButton.xml
 #, python-format
 msgid "Discount"
 msgstr "Popust"
 
+# taken from hr.po
 #. module: pos_discount
 #: model_terms:ir.ui.view,arch_db:pos_discount.res_config_settings_view_form
 msgid "Discount %"
 msgstr "Popust %"
 
+# taken from hr.po
 #. module: pos_discount
 #. odoo-javascript
-#: code:addons/pos_discount/static/src/js/DiscountButton.js:0
-#: model:ir.model.fields,field_description:pos_discount.field_pos_config__discount_pc
-#: model:ir.model.fields,field_description:pos_discount.field_res_config_settings__pos_discount_pc
+#: code:addons/pos_discount/static/src/js/DiscountButton.js
 #, python-format
 msgid "Discount Percentage"
 msgstr "Postotak popusta"
 
+# taken from hr.po
 #. module: pos_discount
 #: model:ir.model.fields,field_description:pos_discount.field_pos_config__discount_product_id
-#: model_terms:ir.ui.view,arch_db:pos_discount.res_config_settings_view_form
 msgid "Discount Product"
 msgstr "Proizvod popusta"
 
+# taken from hr.po
 #. module: pos_discount
 #. odoo-javascript
-#: code:addons/pos_discount/static/src/js/DiscountButton.js:0
+#: code:addons/pos_discount/static/src/js/DiscountButton.js
 #, python-format
 msgid "No discount product found"
 msgstr "Nije pronađen proizvod popusta"
 
 #. module: pos_discount
 #. odoo-javascript
-#: code:addons/pos_discount/static/src/js/DiscountButton.js:0
+#: code:addons/pos_discount/static/src/js/DiscountButton.js
 #, python-format
 msgid "No tax"
 msgstr "No tax"
 
+# taken from hr.po
 #. module: pos_discount
 #: model:ir.model.fields,field_description:pos_discount.field_pos_config__iface_discount
 msgid "Order Discounts"
 msgstr "Popusti narudžbe"
 
+# taken from hr.po
 #. module: pos_discount
 #: model:ir.model,name:pos_discount.model_pos_config
 msgid "Point of Sale Configuration"
 msgstr "Postavke prodajnog mjesta"
 
+# taken from hr.po
 #. module: pos_discount
 #: model:ir.model,name:pos_discount.model_pos_session
 msgid "Point of Sale Session"
@@ -97,25 +106,27 @@ msgstr "Pos Discount Product"
 
 #. module: pos_discount
 #. odoo-javascript
-#: code:addons/pos_discount/static/src/js/DiscountButton.js:0
+#: code:addons/pos_discount/static/src/js/DiscountButton.js
 #, python-format
 msgid "Tax: %s"
 msgstr "Tax: %s"
 
 #. module: pos_discount
 #: model:ir.model.fields,help:pos_discount.field_pos_config__discount_pc
-#: model:ir.model.fields,help:pos_discount.field_res_config_settings__pos_discount_pc
 msgid "The default discount percentage when clicking on the Discount button"
 msgstr "The default discount percentage when clicking on the Discount button"
 
+# taken from hr.po
 #. module: pos_discount
 #. odoo-javascript
-#: code:addons/pos_discount/static/src/js/DiscountButton.js:0
+#: code:addons/pos_discount/static/src/js/DiscountButton.js
 #, python-format
 msgid ""
 "The discount product seems misconfigured. Make sure it is flagged as 'Can be"
 " Sold' and 'Available in Point of Sale'."
 msgstr ""
+"Proizvod popusta izgleda krivo postavljen. Provjerite da li je označen sa "
+"'Može se prodavati' i 'Raspoloživo u POS'."
 
 #. module: pos_discount
 #: model:ir.model.fields,help:pos_discount.field_pos_config__discount_product_id
