--- a/odoo-bringout-oca-ocb-pos_epson_printer/pos_epson_printer/i18n/bs.po
+++ b/odoo-bringout-oca-ocb-pos_epson_printer/pos_epson_printer/i18n/bs.po
@@ -15,33 +15,38 @@ msgstr ""
 "Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
 
+# taken from hr.po
 #. module: pos_epson_printer
 #: model_terms:ir.ui.view,arch_db:pos_epson_printer.pos_iot_config_view_form
-#: model_terms:ir.ui.view,arch_db:pos_epson_printer.res_config_settings_view_form
 msgid "Cashdrawer"
 msgstr "Ladica za novac"
 
 #. module: pos_epson_printer
 #. odoo-javascript
-#: code:addons/pos_epson_printer/static/src/js/printers.js:0
+#: code:addons/pos_epson_printer/static/src/js/printers.js
 #, python-format
 msgid ""
 "Check on the printer configuration for the 'Device ID' setting. It should be"
 " set to: "
 msgstr ""
+"Check on the printer configuration for the 'Device ID' setting. It should be"
+" set to:"
 
+# taken from hr.po
 #. module: pos_epson_printer
 #: model:ir.model,name:pos_epson_printer.model_res_config_settings
 msgid "Config Settings"
 msgstr "Postavke"
 
+# taken from hr.po
 #. module: pos_epson_printer
 #. odoo-javascript
-#: code:addons/pos_epson_printer/static/src/js/printers.js:0
+#: code:addons/pos_epson_printer/static/src/js/printers.js
 #, python-format
 msgid "Connection to the printer failed"
 msgstr "Veza s pisačem nije uspjela"
 
+# taken from hr.po
 #. module: pos_epson_printer
 #: model:ir.model.fields,field_description:pos_epson_printer.field_pos_config__epson_printer_ip
 msgid "Epson Printer IP"
@@ -49,18 +54,19 @@ msgstr "IP epson printera"
 
 #. module: pos_epson_printer
 #: model_terms:ir.ui.view,arch_db:pos_epson_printer.pos_iot_config_view_form
-#: model_terms:ir.ui.view,arch_db:pos_epson_printer.res_config_settings_view_form
 msgid "Epson Receipt Printer IP Address"
 msgstr "Epson Receipt Printer IP Address"
 
 #. module: pos_epson_printer
 #. odoo-javascript
-#: code:addons/pos_epson_printer/static/src/js/printers.js:0
+#: code:addons/pos_epson_printer/static/src/js/printers.js
 #, python-format
 msgid ""
 "If you are on a secure server (HTTPS) please make sure you manually accepted"
 " the certificate by accessing %s"
 msgstr ""
+"If you are on a secure server (HTTPS) please make sure you manually accepted"
+" the certificate by accessing %s"
 
 #. module: pos_epson_printer
 #: model:ir.model.fields,help:pos_epson_printer.field_pos_config__epson_printer_ip
@@ -69,27 +75,30 @@ msgstr "Local IP address of an Epson receipt printer."
 
 #. module: pos_epson_printer
 #. odoo-javascript
-#: code:addons/pos_epson_printer/static/src/js/printers.js:0
+#: code:addons/pos_epson_printer/static/src/js/printers.js
 #, python-format
 msgid "No paper was detected by the printer"
 msgstr "No paper was detected by the printer"
 
 #. module: pos_epson_printer
 #. odoo-javascript
-#: code:addons/pos_epson_printer/static/src/js/printers.js:0
+#: code:addons/pos_epson_printer/static/src/js/printers.js
 #, python-format
 msgid "Please check if the printer has enough paper and is ready to print."
 msgstr "Please check if the printer has enough paper and is ready to print."
 
 #. module: pos_epson_printer
 #. odoo-javascript
-#: code:addons/pos_epson_printer/static/src/js/printers.js:0
+#: code:addons/pos_epson_printer/static/src/js/printers.js
 #, python-format
 msgid ""
 "Please check if the printer is still connected. \n"
 "Some browsers don't allow HTTP calls from websites to devices in the network (for security reasons). If it is the case, you will need to follow Odoo's documentation for 'Self-signed certificate for ePOS printers' and 'Secure connection (HTTPS)' to solve the issue"
 msgstr ""
+"Please check if the printer is still connected.\n"
+"Some browsers don't allow HTTP calls from websites to devices in the network (for security reasons). If it is the case, you will need to follow Odoo's documentation for 'Self-signed certificate for ePOS printers' and 'Secure connection (HTTPS)' to solve the issue"
 
+# taken from hr.po
 #. module: pos_epson_printer
 #: model:ir.model,name:pos_epson_printer.model_pos_config
 msgid "Point of Sale Configuration"
@@ -102,36 +111,37 @@ msgstr "Pos Epson Printer Ip"
 
 #. module: pos_epson_printer
 #. odoo-javascript
-#: code:addons/pos_epson_printer/static/src/js/printers.js:0
+#: code:addons/pos_epson_printer/static/src/js/printers.js
 #, python-format
 msgid "Printing failed"
 msgstr "Printing failed"
 
 #. module: pos_epson_printer
 #: model_terms:ir.ui.view,arch_db:pos_epson_printer.pos_iot_config_view_form
-#: model_terms:ir.ui.view,arch_db:pos_epson_printer.res_config_settings_view_form
 msgid ""
 "The Epson receipt printer will be used instead of the receipt printer "
 "connected to the IoT Box."
 msgstr ""
+"The Epson receipt printer will be used instead of the receipt printer "
+"connected to the IoT Box."
 
 #. module: pos_epson_printer
 #. odoo-javascript
-#: code:addons/pos_epson_printer/static/src/js/printers.js:0
+#: code:addons/pos_epson_printer/static/src/js/printers.js
 #, python-format
 msgid "The following error code was given by the printer:"
 msgstr "The following error code was given by the printer:"
 
 #. module: pos_epson_printer
 #. odoo-javascript
-#: code:addons/pos_epson_printer/static/src/js/printers.js:0
+#: code:addons/pos_epson_printer/static/src/js/printers.js
 #, python-format
 msgid "The printer was successfully reached, but it wasn't able to print."
 msgstr "The printer was successfully reached, but it wasn't able to print."
 
 #. module: pos_epson_printer
 #. odoo-javascript
-#: code:addons/pos_epson_printer/static/src/js/printers.js:0
+#: code:addons/pos_epson_printer/static/src/js/printers.js
 #, python-format
 msgid "To find more details on the error reason, please search online for:"
 msgstr "To find more details on the error reason, please search online for:"
