--- a/odoo-bringout-oca-ocb-pos_mercury/pos_mercury/i18n/bs.po
+++ b/odoo-bringout-oca-ocb-pos_mercury/pos_mercury/i18n/bs.po
@@ -29,6 +29,11 @@ msgid ""
 "                                (eg. Visa, MasterCard, Discovery, American Express, ...). After setting up this\n"
 "                                configuration you should associate it with a Point Of Sale payment method."
 msgstr ""
+"<i>Vantiv konfiguracije</i> define what Vantiv account will be used when\n"
+"                                processing credit card transactions in the Point Of Sale. Setting up a Vantiv\n"
+"                                configuration will enable you to allow payments with various credit cards\n"
+"                                (eg. Visa, MasterCard, Discovery, American Express, ...). After setting up this\n"
+"                                configuration you should associate it with a Point Of Sale payment method."
 
 #. module: pos_mercury
 #. odoo-javascript
@@ -37,13 +42,15 @@ msgstr ""
 msgid "ABOVE AMOUNT PURSUANT"
 msgstr "ABOVE AMOUNT PURSUANT"
 
+# taken from hr.po
 #. module: pos_mercury
 #. odoo-javascript
-#: code:addons/pos_mercury/static/src/xml/OrderReceipt.xml:0
+#: code:addons/pos_mercury/static/src/xml/OrderReceipt.xml
 #, python-format
 msgid "APPROVAL CODE:"
 msgstr "&nbsp;&nbsp;KOD ODOBRENJA:"
 
+# taken from hr.po
 #. module: pos_mercury
 #: model:ir.model,name:pos_mercury.model_barcode_rule
 msgid "Barcode Rule"
@@ -56,14 +63,15 @@ msgstr "Barkod pravilo"
 msgid "CARDHOLDER WILL PAY CARD ISSUER"
 msgstr "CARDHOLDER WILL PAY CARD ISSUER"
 
+# taken from hr.po
 #. module: pos_mercury
 #: model:ir.model.fields,field_description:pos_mercury.field_pos_payment__mercury_card_brand
 msgid "Card Brand"
 msgstr "Marka kartice"
 
+# taken from hr.po
 #. module: pos_mercury
 #: model:ir.model.fields,field_description:pos_mercury.field_pos_payment__mercury_card_number
-#: model_terms:ir.ui.view,arch_db:pos_mercury.view_pos_order
 msgid "Card Number"
 msgstr "Broj kartice"
 
@@ -72,16 +80,22 @@ msgstr "Broj kartice"
 msgid "Card Number Prefix"
 msgstr "Prefiks broja kartice"
 
+# taken from hr.po
 #. module: pos_mercury
 #: model:ir.model.fields,field_description:pos_mercury.field_pos_payment__mercury_card_owner_name
 msgid "Card Owner Name"
 msgstr "Naziv vlasnika kartice"
 
+# taken from hr.po
 #. module: pos_mercury
 #: model_terms:ir.ui.view,arch_db:pos_mercury.view_pos_mercury_configuration_form
-#: model_terms:ir.ui.view,arch_db:pos_mercury.view_pos_mercury_configuration_tree
 msgid "Card Reader"
-msgstr "<i>Mercury konfiguracije</i> definiše koji Mercury račun će se koristiti prilikom\n                                obrađivanja transakcija kreditnim karticama u prodajnom mjestu. Podešavanje Mercury\n                                konfiguracije će vam omogućiti da dozvolite plaćanja različitim kreditnim karticama\n                                (npr. Visa, MasterCard, Discovery, American Express, ...). Nakon podešavanja ove\n                                konfiguracije trebalo bi je povezati sa metodom plaćanja prodajnog mjesta."
+msgstr ""
+"<i>Mercury konfiguracije</i> definiše koji Mercury račun će se koristiti prilikom\n"
+"                                obrađivanja transakcija kreditnim karticama u prodajnom mjestu. Podešavanje Mercury\n"
+"                                konfiguracije će vam omogućiti da dozvolite plaćanja različitim kreditnim karticama\n"
+"                                (npr. Visa, MasterCard, Discovery, American Express, ...). Nakon podešavanja ove\n"
+"                                konfiguracije trebalo bi je povezati sa metodom plaćanja prodajnog mjesta."
 
 #. module: pos_mercury
 #: model_terms:ir.actions.act_window,help:pos_mercury.action_configuration_form
@@ -95,18 +109,19 @@ msgstr "Configure your card reader"
 msgid "Could not read card"
 msgstr "Could not read card"
 
+# taken from hr.po
 #. module: pos_mercury
 #: model:ir.model.fields,field_description:pos_mercury.field_pos_mercury_configuration__create_uid
-#: model:ir.model.fields,field_description:pos_mercury.field_pos_mercury_mercury_transaction__create_uid
 msgid "Created by"
 msgstr "Mercury referentni broj"
 
+# taken from hr.po
 #. module: pos_mercury
 #: model:ir.model.fields,field_description:pos_mercury.field_pos_mercury_configuration__create_date
-#: model:ir.model.fields,field_description:pos_mercury.field_pos_mercury_mercury_transaction__create_date
 msgid "Created on"
 msgstr "Mercury broj zapisa"
 
+# taken from hr.po
 #. module: pos_mercury
 #: model:ir.model.fields.selection,name:pos_mercury.selection__barcode_rule__type__credit
 msgid "Credit Card"
@@ -114,17 +129,20 @@ msgstr "Kreditna kartica"
 
 #. module: pos_mercury
 #. odoo-javascript
-#: code:addons/pos_mercury/static/src/js/PaymentScreen.js:0
+#: code:addons/pos_mercury/static/src/js/PaymentScreen.js
 #, python-format
 msgid ""
 "Credit card refunds are not supported. Instead select your credit card "
 "payment method, click 'Validate' and refund the original charge manually "
 "through the Vantiv backend."
 msgstr ""
+"Credit card refunds are not supported. Instead select your credit card "
+"payment method, click 'Validate' and refund the original charge manually "
+"through the Vantiv backend."
 
+# taken from hr.po
 #. module: pos_mercury
 #: model:ir.model.fields,field_description:pos_mercury.field_pos_mercury_configuration__display_name
-#: model:ir.model.fields,field_description:pos_mercury.field_pos_mercury_mercury_transaction__display_name
 msgid "Display Name"
 msgstr "Mercury kredencijali"
 
@@ -135,6 +153,9 @@ msgid ""
 "                                (without having pressed anything else) will charge the full amount of the order to\n"
 "                                the card."
 msgstr ""
+"For quickly handling orders: just swiping a credit card when on the payment screen\n"
+"(without having pressed anything else) will charge the full amount of the order to\n"
+"the card."
 
 #. module: pos_mercury
 #. odoo-javascript
@@ -167,27 +188,29 @@ msgid ""
 "If you don't already have a Vantiv account, contact Vantiv at +1 (800) 846-4472\n"
 "                                to create one."
 msgstr ""
+"If you don't already have a Vantiv account, contact Vantiv at +1 (800) 846-4472\n"
+"to create one."
 
 #. module: pos_mercury
 #: model:ir.model.fields,help:pos_mercury.field_pos_payment__mercury_invoice_no
 msgid "Invoice number from Vantiv Pay"
 msgstr "Broj fakture iz Vantiv Pay"
 
+# taken from hr.po
 #. module: pos_mercury
 #: model:ir.model.fields,field_description:pos_mercury.field_pos_mercury_configuration____last_update
-#: model:ir.model.fields,field_description:pos_mercury.field_pos_mercury_mercury_transaction____last_update
 msgid "Last Modified on"
 msgstr "Mercury broj fakture"
 
+# taken from hr.po
 #. module: pos_mercury
 #: model:ir.model.fields,field_description:pos_mercury.field_pos_mercury_configuration__write_uid
-#: model:ir.model.fields,field_description:pos_mercury.field_pos_mercury_mercury_transaction__write_uid
 msgid "Last Updated by"
 msgstr "Zadnji ažurirao"
 
+# taken from hr.po
 #. module: pos_mercury
 #: model:ir.model.fields,field_description:pos_mercury.field_pos_mercury_configuration__write_date
-#: model:ir.model.fields,field_description:pos_mercury.field_pos_mercury_mercury_transaction__write_date
 msgid "Last Updated on"
 msgstr "Zadnje ažurirano"
 
@@ -201,6 +224,7 @@ msgstr "ID trgovca"
 msgid "Merchant Password"
 msgstr "Lozinka trgovca"
 
+# taken from hr.po
 #. module: pos_mercury
 #: model:ir.model.fields,field_description:pos_mercury.field_pos_mercury_configuration__name
 msgid "Name"
@@ -213,7 +237,7 @@ msgstr "Referentni broj plaćanja od Mercury Pay"
 
 #. module: pos_mercury
 #. odoo-python
-#: code:addons/pos_mercury/models/pos_mercury_transaction.py:0
+#: code:addons/pos_mercury/models/pos_mercury_transaction.py
 #, python-format
 msgid "No Vantiv configuration associated with the payment method."
 msgstr "No Vantiv configuration associated with the payment method."
@@ -227,14 +251,15 @@ msgstr "No opened point of sale session for user %s found."
 
 #. module: pos_mercury
 #. odoo-javascript
-#: code:addons/pos_mercury/static/src/js/PaymentScreen.js:0
+#: code:addons/pos_mercury/static/src/js/PaymentScreen.js
 #, python-format
 msgid "No response from Vantiv (Vantiv down?)"
 msgstr "No response from Vantiv (Vantiv down?)"
 
+# taken from hr.po
 #. module: pos_mercury
 #. odoo-javascript
-#: code:addons/pos_mercury/static/src/js/PaymentScreen.js:0
+#: code:addons/pos_mercury/static/src/js/PaymentScreen.js
 #, python-format
 msgid "No response from server (connected to network?)"
 msgstr "Nema Mercury konfiguracije povezane sa dnevnikom."
@@ -247,23 +272,26 @@ msgstr "Nema Mercury konfiguracije povezane sa dnevnikom."
 msgid "Odoo error while processing transaction."
 msgstr "Odoo error while processing transaction."
 
+# taken from hr.po
 #. module: pos_mercury
 #. odoo-javascript
-#: code:addons/pos_mercury/static/src/js/PaymentTransactionPopup.js:0
+#: code:addons/pos_mercury/static/src/js/PaymentTransactionPopup.js
 #, python-format
 msgid "Ok"
 msgstr "U redu"
 
+# taken from hr.po
 #. module: pos_mercury
 #. odoo-javascript
-#: code:addons/pos_mercury/static/src/js/PaymentTransactionPopup.js:0
+#: code:addons/pos_mercury/static/src/js/PaymentTransactionPopup.js
 #, python-format
 msgid "Online Payment"
 msgstr "Online plaćanje"
 
+# taken from hr.po
 #. module: pos_mercury
 #. odoo-javascript
-#: code:addons/pos_mercury/static/src/js/PaymentScreen.js:0
+#: code:addons/pos_mercury/static/src/js/PaymentScreen.js
 #, python-format
 msgid "Partially approved"
 msgstr "Djelomično odobren"
@@ -272,14 +300,14 @@ msgstr "Djelomično odobren"
 #: model:ir.model.fields,help:pos_mercury.field_pos_mercury_configuration__merchant_pwd
 msgid ""
 "Password of the merchant to authenticate him on the payment provider server"
-msgstr ""
+msgstr "Lozinka trgovca za autentifikaciju na serveru pružatelja plaćanja"
 
 #. module: pos_mercury
 #. odoo-javascript
-#: code:addons/pos_mercury/static/src/js/PaymentScreen.js:0
+#: code:addons/pos_mercury/static/src/js/PaymentScreen.js
 #, python-format
 msgid "Pay with: "
-msgstr "Pay with: "
+msgstr "Pay with:"
 
 #. module: pos_mercury
 #: model:ir.model.fields,help:pos_mercury.field_pos_payment__mercury_record_no
@@ -293,26 +321,30 @@ msgstr "Referentni broj plaćanja iz Vantiv Pay"
 
 #. module: pos_mercury
 #. odoo-javascript
-#: code:addons/pos_mercury/static/src/js/PaymentScreen.js:0
+#: code:addons/pos_mercury/static/src/js/PaymentScreen.js
 #, python-format
 msgid "Please setup your Vantiv merchant account."
 msgstr "Jedno povlačenje kreditne kartice već čeka."
 
+# taken from hr.po
 #. module: pos_mercury
 #: model:ir.model,name:pos_mercury.model_pos_order
 msgid "Point of Sale Orders"
 msgstr "Narudžbe POS-a"
 
+# taken from hr.po
 #. module: pos_mercury
 #: model:ir.model,name:pos_mercury.model_pos_payment_method
 msgid "Point of Sale Payment Methods"
 msgstr "Načini plaćanja na prodajnom mjestu"
 
+# taken from hr.po
 #. module: pos_mercury
 #: model:ir.model,name:pos_mercury.model_pos_payment
 msgid "Point of Sale Payments"
 msgstr "Mercury konfiguracija prodajnog mjesta"
 
+# taken from hr.po
 #. module: pos_mercury
 #: model:ir.model,name:pos_mercury.model_pos_session
 msgid "Point of Sale Session"
@@ -344,7 +376,7 @@ msgstr "Reversal failed, sending VoidSale..."
 
 #. module: pos_mercury
 #. odoo-javascript
-#: code:addons/pos_mercury/static/src/js/PaymentScreen.js:0
+#: code:addons/pos_mercury/static/src/js/PaymentScreen.js
 #, python-format
 msgid "Reversal succeeded"
 msgstr "Molimo podesite vaš Mercury trgovinski račun."
@@ -363,11 +395,13 @@ msgstr "Sending reversal..."
 msgid "TO CARDHOLDER AGREEMENT"
 msgstr "TO CARDHOLDER AGREEMENT"
 
+# taken from hr.po
 #. module: pos_mercury
 #: model:ir.model.fields,help:pos_mercury.field_pos_payment__mercury_card_brand
 msgid "The brand of the payment card (e.g. Visa, AMEX, ...)"
 msgstr "Konfiguracija Mercury korišćena za ovaj dnevnik"
 
+# taken from hr.po
 #. module: pos_mercury
 #: model:ir.model.fields,help:pos_mercury.field_pos_payment__mercury_prefixed_card_number
 msgid "The card number used for the payment."
@@ -385,20 +419,24 @@ msgstr "Posljednje 4 cifre kartice korišćene za plaćanje"
 
 #. module: pos_mercury
 #. odoo-javascript
-#: code:addons/pos_mercury/static/src/js/PaymentScreen.js:0
+#: code:addons/pos_mercury/static/src/js/PaymentScreen.js
 #, python-format
 msgid ""
 "This can be caused by a badly executed swipe or by not having your keyboard "
 "layout set to US QWERTY (not US International)."
 msgstr ""
+"This can be caused by a badly executed swipe or by not having your keyboard "
+"layout set to US QWERTY (not US International)."
 
+# taken from hr.po
 #. module: pos_mercury
 #. odoo-javascript
-#: code:addons/pos_mercury/static/src/js/PaymentScreen.js:0
+#: code:addons/pos_mercury/static/src/js/PaymentScreen.js
 #, python-format
 msgid "Transaction approved"
 msgstr "Transakcija odobrena"
 
+# taken from hr.po
 #. module: pos_mercury
 #: model:ir.model.fields,field_description:pos_mercury.field_barcode_rule__type
 msgid "Type"
@@ -412,6 +450,10 @@ msgid ""
 "                                just like on any other payment line. Whenever the payment line is set up, a card\n"
 "                                can be swiped through the card reader device."
 msgstr ""
+"Korišćenje Vantiv integracije u prodajnom mjestu je jednostavno: samo pritisnite\n"
+"                                proterani metod plaćanja. Nakon toga se iznos može prilagoditi (npr. za povrat gotovine)\n"
+"                                baš kao na bilo kojoj drugoj liniji plaćanja. Kad god je linija plaćanja postavljena, kartica\n"
+"                                se može provući kroz uređaj za čitanje kartica."
 
 #. module: pos_mercury
 #: model_terms:ir.ui.view,arch_db:pos_mercury.res_config_settings_view_form_inherit_pos_mercury
@@ -420,7 +462,6 @@ msgstr "Vantiv računi"
 
 #. module: pos_mercury
 #: model:ir.actions.act_window,name:pos_mercury.action_configuration_form
-#: model:ir.ui.menu,name:pos_mercury.menu_pos_pos_mercury_config
 msgid "Vantiv Configurations"
 msgstr "Vantiv konfiguracije"
 
@@ -446,14 +487,14 @@ msgstr "Vantiv referentni broj"
 
 #. module: pos_mercury
 #. odoo-javascript
-#: code:addons/pos_mercury/static/src/js/PaymentScreen.js:0
+#: code:addons/pos_mercury/static/src/js/PaymentScreen.js
 #, python-format
 msgid "VoidSale succeeded"
 msgstr "Poništavanje prodaje uspješno"
 
 #. module: pos_mercury
 #. odoo-javascript
-#: code:addons/pos_mercury/static/src/xml/PaymentScreenPaymentLines.xml:0
+#: code:addons/pos_mercury/static/src/xml/PaymentScreenPaymentLines.xml
 #, python-format
 msgid "WAITING FOR SWIPE"
 msgstr "ČEKA SE POVLAČENJE"
@@ -464,6 +505,8 @@ msgid ""
 "We currently support the MagTek Dynamag card reader device. It can be connected\n"
 "                                directly to the Point Of Sale device or it can be connected to the IoTBox."
 msgstr ""
+"Trenutno podržavamo MagTek Dynamag uređaj za čitanje kartica. Može biti povezan\n"
+"                                direktno sa uređajem prodajnog mjesta ili može biti povezan sa IoTBox-om."
 
 #. module: pos_mercury
 #. odoo-javascript
