--- a/odoo-bringout-oca-ocb-pos_discount/pos_discount/i18n/bs.po
+++ b/odoo-bringout-oca-ocb-pos_discount/pos_discount/i18n/bs.po
@@ -36,7 +36,7 @@ msgstr "Omogućuje blagajniku odobravanje popusta na cijelu narudžbu."
 #. module: pos_discount
 #: model:ir.model,name:pos_discount.model_res_config_settings
 msgid "Config Settings"
-msgstr "Postavke"
+msgstr "Postavke konfiguracije"
 
 # taken from hr.po
 #. module: pos_discount
