--- a/odoo-bringout-oca-ocb-pos_cache/pos_cache/i18n/bs.po
+++ b/odoo-bringout-oca-ocb-pos_cache/pos_cache/i18n/bs.po
@@ -70,19 +70,19 @@ msgstr "Invalidate cache"
 #. module: pos_cache
 #: model:ir.model.fields,field_description:pos_cache.field_pos_cache____last_update
 msgid "Last Modified on"
-msgstr "Zadnje mijenjano"
+msgstr "Zadnja izmjena na"
 
 # taken from hr.po
 #. module: pos_cache
 #: model:ir.model.fields,field_description:pos_cache.field_pos_cache__write_uid
 msgid "Last Updated by"
-msgstr "Zadnji ažurirao"
+msgstr "Zadnje ažuriranje izvršio"
 
 # taken from hr.po
 #. module: pos_cache
 #: model:ir.model.fields,field_description:pos_cache.field_pos_cache__write_date
 msgid "Last Updated on"
-msgstr "Zadnje ažurirano"
+msgstr "Zadnje ažuriranje na"
 
 #. module: pos_cache
 #: model:ir.model.fields,field_description:pos_cache.field_pos_config__limit_products_per_request
