--- a/odoo-bringout-oca-ocb-pos_hr/pos_hr/i18n/bs.po
+++ b/odoo-bringout-oca-ocb-pos_hr/pos_hr/i18n/bs.po
@@ -39,7 +39,7 @@ msgstr "Promijeni blagajnika"
 #. module: pos_hr
 #: model:ir.model,name:pos_hr.model_res_config_settings
 msgid "Config Settings"
-msgstr "Postavke konfiguracije"
+msgstr "Postavke"
 
 # taken from hr.po
 #. module: pos_hr
