--- a/odoo-bringout-oca-ocb-pos_loyalty/pos_loyalty/i18n/bs.po
+++ b/odoo-bringout-oca-ocb-pos_loyalty/pos_loyalty/i18n/bs.po
@@ -112,7 +112,7 @@ msgstr "Barkod pravilo"
 #. module: pos_loyalty
 #: model:ir.model,name:pos_loyalty.model_res_config_settings
 msgid "Config Settings"
-msgstr "Postavke konfiguracije"
+msgstr "Postavke"
 
 # taken from hr.po
 #. module: pos_loyalty
