--- a/odoo-bringout-oca-ocb-pos_mercury/pos_mercury/i18n/bs.po
+++ b/odoo-bringout-oca-ocb-pos_mercury/pos_mercury/i18n/bs.po
@@ -113,13 +113,13 @@ msgstr "Could not read card"
 #. module: pos_mercury
 #: model:ir.model.fields,field_description:pos_mercury.field_pos_mercury_configuration__create_uid
 msgid "Created by"
-msgstr "Kreirao"
+msgstr "Mercury referentni broj"
 
 # taken from hr.po
 #. module: pos_mercury
 #: model:ir.model.fields,field_description:pos_mercury.field_pos_mercury_configuration__create_date
 msgid "Created on"
-msgstr "Kreirano"
+msgstr "Mercury broj zapisa"
 
 # taken from hr.po
 #. module: pos_mercury
@@ -144,7 +144,7 @@ msgstr ""
 #. module: pos_mercury
 #: model:ir.model.fields,field_description:pos_mercury.field_pos_mercury_configuration__display_name
 msgid "Display Name"
-msgstr "Prikazani naziv"
+msgstr "Mercury kredencijali"
 
 #. module: pos_mercury
 #: model_terms:ir.ui.view,arch_db:pos_mercury.view_pos_mercury_configuration_form
@@ -200,19 +200,19 @@ msgstr "Broj fakture iz Vantiv Pay"
 #. module: pos_mercury
 #: model:ir.model.fields,field_description:pos_mercury.field_pos_mercury_configuration____last_update
 msgid "Last Modified on"
-msgstr "Zadnja izmjena na"
+msgstr "Mercury broj fakture"
 
 # taken from hr.po
 #. module: pos_mercury
 #: model:ir.model.fields,field_description:pos_mercury.field_pos_mercury_configuration__write_uid
 msgid "Last Updated by"
-msgstr "Zadnje ažuriranje izvršio"
+msgstr "Zadnji ažurirao"
 
 # taken from hr.po
 #. module: pos_mercury
 #: model:ir.model.fields,field_description:pos_mercury.field_pos_mercury_configuration__write_date
 msgid "Last Updated on"
-msgstr "Zadnje ažuriranje na"
+msgstr "Zadnje ažurirano"
 
 #. module: pos_mercury
 #: model:ir.model.fields,field_description:pos_mercury.field_pos_mercury_configuration__merchant_id
